Add the routes.yml file

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "require": {
-    "silex/silex": "~1.3"
+    "silex/silex": "~1.3",
+    "symfony/yaml":"v2.2.0",
+    "symfony/config":"v2.2.0"
   },
   "autoload": {
     "psr-4": {
